add create local files folder

--- a/test/locales/en-us.json
+++ b/test/locales/en-us.json
@@ -1,3 +1,5 @@
 {
-	"response.forbidden.title": "response.forbidden.title"
+	"response.forbidden.title": "response.forbidden.title",
+	"response.notFound.title": "response.notFound.title",
+	"response.serveError.title": "response.serveError.title"
 }
